# Vector-Search-Engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
include/: cuda_utils.h  kernels.h  vector_index.h
python/: benchmark.py  bindings.cpp
src/: kernel_coalesced.cu  kernel_naive.cu  kernel_smem.cu  kernel_warp.cu  vector_index.cu
tests/: test_bindings.py  test_correctness.cpp  test_perf.cu
